--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   			/*min-width: 200px;*/
   			z-index: 1002;
   			display: none;
-  		}
+  	  		}
   		@media screen and (min-width: 600px){
 			aside.messageBoard {
 				width:300px;
@@ -175,6 +175,10 @@
 
   		#toggle-messageBoard:checked ~ aside.messageBoard {
   			display: block;
+  			height: 100%;
+  			margin: 20px;
+  			overflow: scroll;
+  			z-index: 2005;
   		}
 		#toggle-messageBoard{
   			display: none;
@@ -185,13 +189,12 @@
 			top: 0;
 			right: 0;
 			bottom: 0;
-			background-color: rgba(0,0,0, 0.6);
 			z-index: 1000;
 			display: none;
 		}
 		#toggle-messageBoard:checked ~ .message-off {
 			display: block;
-			z-index: 1004;
+			z-index: 2006;
 		}
 		@media screen and (min-width: 600px){
 			.message-on, .message-off { 
@@ -424,6 +427,13 @@
 				Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
 				Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
 				Chris says: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
+				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
+				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
+				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
+				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
+				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
+				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
+				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
 				Chris says: Lorem ip -->sum dolor sit amet, consectetur adipisicing elit. Officiis saepe, molestias natus dolore, qui excepturi magnam nobis quis ipsa sint distinctio doloremque? Alias dolore fugiat assumenda consequuntur quis exercitationem mollitia.
 				</div>
 			</aside>
