--- a/index.html
+++ b/index.html
@@ -284,6 +284,15 @@
 			padding-bottom:48%; /*this must be placed in container if .messageBoard-wrapper or .heroContent is not used*/
 			margin-top: 8%;
 		}
+		.figure{
+			position: absolute;
+			right: 100;
+			top: 70;
+			width: 62%;
+			max-width: 570px;
+			margin-left: 20%;
+			margin-top: 3.5%;
+		}
 /**************************************************HERO/
 
 /*SELECTION-BAR****************************************/	
@@ -451,7 +460,7 @@
 	</header>
 	<div class="hero">
 		<div class="inner">
-			
+			<img class="figure" src="mmaGirlCropped.png" alt="">
 			<input id="toggle-messageBoard" type="checkbox" />
 			<label for="toggle-messageBoard" class="message-on"><img class="icon" src="messageIcon.png" alt=""></label>
 			<label for="toggle-messageBoard" class="message-off"></label>
@@ -486,7 +495,7 @@
 				</div>
 			</aside>
 			<div class="heroContent">
-				content
+				<!-- <img src="mmaGirlCropped.png" alt=""> -->
 			</div>
 		
 		</div>
