color changes to figure

--- a/index.html
+++ b/index.html
@@ -289,9 +289,8 @@
 			right: 100;
 			top: 70;
 			width: 62%;
-			max-width: 570px;
-			margin-left: 20%;
-			margin-top: 3.5%;
+			max-width: 765px;
+			margin-left: 7%;s
 		}
 /**************************************************HERO/
 
@@ -460,7 +459,7 @@
 	</header>
 	<div class="hero">
 		<div class="inner">
-			<img class="figure" src="mmaGirlCropped.png" alt="">
+			<img class="figure" src="mmaGirlCroppedMod.png" alt="">
 			<input id="toggle-messageBoard" type="checkbox" />
 			<label for="toggle-messageBoard" class="message-on"><img class="icon" src="messageIcon.png" alt=""></label>
 			<label for="toggle-messageBoard" class="message-off"></label>
